# Domotics-base

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  annotated.html  array_8h_source.html  class_data_1_1_array-members.html  class_data_1_1_array.html  class_data_1_1_collection_iterator-members.html  class_data_1_1_collection_iterator.html  class_data_1_1string__literal-members.html  class_data_1_1string__literal.html  class_mqtt-members.html  class_mqtt.html  class_mqtt_enc28_j60_ethernet-members.html  class_mqtt_enc28_j60_ethernet.html  class_mqtt_esp8266_wifi-members.html  class_mqtt_esp8266_wifi.html  class_mqtt_message_parser-members.html  class_mqtt_message_parser.html  classes.html  compile__time__checks_8h_source.html  dir_821002d4f10779a80d4fb17bc32f21f1.html  dir_91e62c48b50e2efefbf56be16d49cf08.html  dir_bd52eb7ac821349adc834157bbaf2648.html  dir_d44c64559bbebec7f509842c48db8b23.html  domotics__debug_8h_source.html  files.html  functions.html  functions_func.html  functions_type.html  generic__data__iterator_8h_source.html  globals.html  globals_func.html  hierarchy.html  index.html  library.json  (+29 more)
include/: domotics_debug.h  logger.h  mqtt.h  mqtt_enc28j60_ethernet.h  mqtt_esp8266_wifi.h  mqtt_eth.h  mqtt_wifi.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  (+21 more)
tests/: CMakeLists.txt  array_test.cpp  logger_test.cpp  mqtt_message_parser_test.cpp  string_append_test.cpp  string_append_unsafe_test.cpp
(+28 files in other folders)
